# Rx

Rx/: CMakeLists.txt  main.c
Rx/domain/: domain.c  domain.h
Rx/repo/: lista.c  lista.h  repo.c  repo.h
Rx/service/: service.c  service.h
Rx/teste/: teste.c  teste.h
Rx/ui/: ui.c  ui.h
Rx/validator/: validator.c  validator.h
